--- a/index.html
+++ b/index.html
@@ -157,6 +157,45 @@
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <div class="projects-tabs">
+            <div class="project-image-container">
+              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+            </div>
+            <div class="project-description-title">
+              <h3 class="text description-title">TinDog Project</h3>
+            </div>
+            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="view-project">
+              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+            </div>
+          </div>
+          <div class="projects-tabs">
+            <div class="project-image-container">
+              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+            </div>
+            <div class="project-description-title">
+              <h3 class="text description-title">TinDog Project</h3>
+            </div>
+            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="view-project">
+              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+            </div>
+          </div>
+          <div class="projects-tabs">
+            <div class="project-image-container">
+              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+            </div>
+            <div class="project-description-title">
+              <h3 class="text description-title">TinDog Project</h3>
+            </div>
+            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="view-project">
+              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
