added new files and various changes

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <h3 class="projects-info-title">Web Development Projects</h3>
         <p class="text projects-info-paragraph">These are projects made step by step by Angelas Yu's course in Udemy.</p>
         <div class="projects-tabs-container">
+          <!-- MONDRIAN PROJECT  -->
           <div class="projects-tabs">
             <div class="project-image-container">
               <img src="./assets/images/mondrianProject.png" alt="mondrian project" loading="lazy" class="image-proj" />
@@ -127,10 +128,11 @@
             </div>
             <div class="description-text text">Recreated a Mondrian art piece using CSS</div>
             <div class="view-project">
-              <a href="../10.3 Mondrian Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="Projects/Mondrian/index.html" class="view-project btn" target="_blank">View Project</a>
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <!-- TINDOG PROJECT  -->
           <div class="projects-tabs">
             <div class="project-image-container">
               <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
@@ -140,10 +142,11 @@
             </div>
             <div class="description-text text">Built a landing page using Bootstrap</div>
             <div class="view-project">
-              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="Projects/TinDog/index.html" class="view-project btn" target="_blank">View Project</a>
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <!-- MOVE WITH JOY  -->
           <div class="projects-tabs">
             <div class="project-image-container">
               <img src="./assets/images/moveItProject.png" alt="move it project" loading="lazy" class="image-proj img-icon" />
@@ -153,33 +156,35 @@
             </div>
             <div class="description-text text">Developed a Packers and Movers website</div>
             <div class="view-project">
-              <a href="../11.2 Bootstrap Components/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="Projects/Move With Joy/index.html" class="view-project btn" target="_blank">View Project</a>
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <!-- DICE GAME -->
           <div class="projects-tabs">
             <div class="project-image-container">
-              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+              <img src="./assets/images/diceGame.png" alt="tindog project" loading="lazy" class="image-proj" />
             </div>
             <div class="project-description-title">
-              <h3 class="text description-title">TinDog Project</h3>
+              <h3 class="text description-title">Dice Game Project</h3>
             </div>
-            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="description-text text">A Dice game made with HTML,CSS and JS.</div>
             <div class="view-project">
-              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="Projects/Dice Game/dicee.html" class="view-project btn" target="_blank">View Project</a>
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <!-- DRUMKIT GAME -->
           <div class="projects-tabs">
             <div class="project-image-container">
-              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+              <img src="./assets/images/drumKitGame.png" alt="tindog project" loading="lazy" class="image-proj" />
             </div>
             <div class="project-description-title">
-              <h3 class="text description-title">TinDog Project</h3>
+              <h3 class="text description-title">Drumkit Game Project</h3>
             </div>
-            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="description-text text">Buttons with sounds using JS</div>
             <div class="view-project">
-              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="./Projects/DrumKit Game/index.html" class="view-project btn" target="_blank">View Project</a>
               <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
