added another project

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="description-text text">Recreated a Mondrian art piece using CSS</div>
             <div class="view-project">
               <a href="Projects/Mondrian/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Mondrian" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
           <!-- TINDOG PROJECT  -->
@@ -143,7 +143,7 @@
             <div class="description-text text">Built a landing page using Bootstrap</div>
             <div class="view-project">
               <a href="Projects/TinDog/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/TinDog" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
           <!-- MOVE WITH JOY  -->
@@ -157,7 +157,7 @@
             <div class="description-text text">Developed a Packers and Movers website</div>
             <div class="view-project">
               <a href="Projects/Move With Joy/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Move%20With%20Joy" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
           <!-- DICE GAME -->
@@ -171,7 +171,7 @@
             <div class="description-text text">A Dice game made with HTML,CSS and JS.</div>
             <div class="view-project">
               <a href="Projects/Dice Game/dicee.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Dice%20Game" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
           <!-- DRUMKIT GAME -->
@@ -185,20 +185,21 @@
             <div class="description-text text">Buttons with sounds using JS</div>
             <div class="view-project">
               <a href="./Projects/DrumKit Game/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/DrumKit%20Game" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
+          <!-- WEB DESIGN AGENCY -->
           <div class="projects-tabs">
             <div class="project-image-container">
-              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+              <img src="./assets/images/webDesignAgency.png" alt="tindog project" loading="lazy" class="image-proj" />
             </div>
             <div class="project-description-title">
-              <h3 class="text description-title">TinDog Project</h3>
+              <h3 class="text description-title">Web Design Agency Project</h3>
             </div>
-            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="description-text text">Built a Web Design Agency (basic HTML,CSS)</div>
             <div class="view-project">
-              <a href="../11.3 TinDog Project/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="../11.3 TinDog Project/index.html" class="view-code btn" target="_blank">View Code</a>
+              <a href="./Projects/Web Design Agency/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Web%20Design%20Agency" class="view-code btn" target="_blank">View Code</a>
             </div>
           </div>
         </div>
