changed styles and added elements on projects tab

--- a/index.html
+++ b/index.html
@@ -203,6 +203,39 @@
             </div>
           </div>
         </div>
+        <div class="hr-with-text">
+          <p class="text projects-info-paragraph my-projects-text"> These are projects i made and still work on myself.</p>
+        </div>
+        <!-- MY PROJECTS TAB -->
+        <div class="my-projects projects-tabs-container">
+          <!-- MONDRIAN PROJECT  -->
+          <div class="projects-tabs">
+            <div class="project-image-container">
+              <img src="./assets/images/mondrianProject.png" alt="mondrian project" loading="lazy" class="image-proj" />
+            </div>
+            <div class="project-description-title">
+              <h3 class="text description-title">Mondrian Project</h3>
+            </div>
+            <div class="description-text text">Recreated a Mondrian art piece using CSS</div>
+            <div class="view-project">
+              <a href="Projects/Mondrian/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Mondrian" class="view-code btn" target="_blank">View Code</a>
+            </div>
+          </div>
+          <!-- TINDOG PROJECT  -->
+          <div class="projects-tabs">
+            <div class="project-image-container">
+              <img src="./assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
+            </div>
+            <div class="project-description-title">
+              <h3 class="text description-title">TinDog Project</h3>
+            </div>
+            <div class="description-text text">Built a landing page using Bootstrap</div>
+            <div class="view-project">
+              <a href="Projects/TinDog/index.html" class="view-project btn" target="_blank">View Project</a>
+              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/TinDog" class="view-code btn" target="_blank">View Code</a>
+            </div>
+          </div>
       </div>
     </section>
     <!-- Contact Me -->
