--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </section>
+    <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <!-- About Me -->
     <section id="about-me">
       <div class="about-me-container">
@@ -65,7 +66,8 @@
           <div class="skills-tab">
             <h2 class="text skills-title">Skillset</h2>
             <div class="skills-info">
-              <div>
+              <!-- html/css/bootstrap -->
+              <div class="skills-text-container">
                 <div>
                   <h3 class="text skills-info-title">HTML/CSS/BOOTSTRAP</h3>
                   <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-filetype-html" viewBox="0 0 16 16">
@@ -100,11 +102,24 @@
                 </div>
                 <p class="text skills-prgph">Creating effective designs which are easy to navigate and use for the user is one of the things i put more effort into.</p>
               </div>
+              <!-- javascript -->
+              <div>
+                <div>
+                  <h3 class="text skills-info-title">JAVASCRIPT/JQUERY</h3>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-filetype-js" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2H8v-1h4a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5zM3.186 15.29a1.2 1.2 0 0 1-.111-.449h.765a.58.58 0 0 0 .255.384q.105.073.249.114.143.041.319.041.246 0 .413-.07a.56.56 0 0 0 .255-.193.5.5 0 0 0 .085-.29.39.39 0 0 0-.153-.326q-.151-.12-.462-.193l-.619-.143a1.7 1.7 0 0 1-.539-.214 1 1 0 0 1-.351-.367 1.1 1.1 0 0 1-.123-.524q0-.366.19-.639.19-.272.528-.422.336-.15.776-.149.457 0 .78.152.324.153.5.41.18.255.2.566h-.75a.56.56 0 0 0-.12-.258.6.6 0 0 0-.247-.181.9.9 0 0 0-.369-.068q-.325 0-.513.152a.47.47 0 0 0-.184.384q0 .18.143.3a1 1 0 0 0 .405.175l.62.143q.327.075.566.211.24.136.375.358t.135.56q0 .37-.188.656a1.2 1.2 0 0 1-.539.439q-.351.158-.858.158-.381 0-.665-.09a1.4 1.4 0 0 1-.478-.252 1.1 1.1 0 0 1-.29-.375m-3.104-.033A1.3 1.3 0 0 1 0 14.791h.765a.6.6 0 0 0 .073.27.5.5 0 0 0 .454.246q.285 0 .422-.164.138-.165.138-.466v-2.745h.79v2.725q0 .66-.357 1.005-.354.345-.984.345a1.6 1.6 0 0 1-.569-.094 1.15 1.15 0 0 1-.407-.266 1.1 1.1 0 0 1-.243-.39"/>
+                  </svg>
+                </div>
+                <p class="text skills-prgph">Skilled at writing vanilla javascript in a practical and readable way working my way towards learning various frameworks such as React.
+                  Also learning jQuery and trying to get fluent at it.
+                </p>
+              </div>
             </div>
           </div>
         </article>
       </div>
     </section>
+    <!-- IMPORTANT GIVE MORE EMPHASIS HERE!!! -->
     <!-- Projects -->
     <section id="projects">
       <div class="projects-container">
@@ -242,37 +257,40 @@
     <section id="contact-me">
       <div class="contact-me-container">
         <div>
-          <h2 class="text projects-title">Contact Me</h2>
+          <h2 class="text projects-title" alt="contant me">Contact Me</h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="icon-mark bi bi-terminal" viewBox="0 0 16 16">
             <path d="M6 9a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3A.5.5 0 0 1 6 9zM3.854 4.146a.5.5 0 1 0-.708.708L4.793 6.5 3.146 8.146a.5.5 0 1 0 .708.708l2-2a.5.5 0 0 0 0-.708l-2-2z" />
             <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12z" />
           </svg>
         </div>
-        <h3 class="contact-info-title">Feel free to reach out to me i am currently available for freelance work.</h3>
-        <p class="text contact-info-paragraph">Here are my contact info:</p>
+        <h3 class="contact-info-title" alt="text">Feel free to reach out to me i am currently available for freelance work.</h3>
+        <p class="text contact-info-paragraph" alt="contact info">Here are my contact info:</p>
         <div class="contact-info">
           <ul>
+            <!-- facebook -->
             <li class="cnt-info-panels text">
-              <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-facebook" viewBox="0 0 16 16">
+              <a href="#" alt="facebook link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-facebook" viewBox="0 0 16 16" alt="facebook icon">
                   <path
                     d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
                   />
                 </svg>
               </a>
             </li>
+            <!-- gmail -->
             <li class="cnt-info-panels text">
-              <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-envelope" viewBox="0 0 16 16">
+              <a href="#" alt="gmail link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-envelope" viewBox="0 0 16 16" alt="gmail icon">
                   <path
                     d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"
                   />
                 </svg>
               </a>
             </li>
+            <!-- github -->
             <li class="cnt-info-panels text">
-              <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-github" viewBox="0 0 16 16">
+              <a href="https://github.com/AntreasDrk" alt="github link">
+                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-github" viewBox="0 0 16 16" alt="github icon">
                   <path
                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
                   />
@@ -287,7 +305,7 @@
     <!--Footer-->
     <section class="footer">
       <footer class="footer">
-        <p class="text footer-text">Antreas Drakopoulos© 2023</p>
+        <p class="text footer-text" alt="footer">Antreas Drakopoulos© 2023</p>
       </footer>
     </section>
   </body>
