changed profile pic/img design

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
           </div>
           <div>
             <h1>I am Antreas</h1>
-            <h2>an aspiring programmer and <span class="designer">designer.</span></h2>
+          </div>
+          <div>
+            <h2 class="sub-text">an aspiring programmer and <span class="designer">designer.</span></h2>
           </div>
         </div>
       </div>
@@ -218,7 +220,7 @@
             </div>
           </div>
         </div>
-        <div class="hr-with-text">
+        <div class="seperator seperator-with-text">
           <p class="text projects-info-paragraph my-projects-text"> These are projects i made and still work on myself.</p>
         </div>
         <!-- MY PROJECTS TAB -->
@@ -253,6 +255,7 @@
           </div>
       </div>
     </section>
+    <div class="seperator"></div>
     <!-- Contact Me -->
     <section id="contact-me">
       <div class="contact-me-container">
