--- a/index.html
+++ b/index.html
@@ -49,21 +49,8 @@
     </section>
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <!-- About Me -->
-    <section id="about-me">
-      <div class="about-me-container">
-        <article>
-          <h2 class="text abt-me-title">About Me</h2>
-          <a href="#" class="hobbies-interests-btn" title="Hobbies and Interests">
-            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
-              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
-            </svg>
-          </a>
-          <p class="text abt-me-paragraph">
-            My name is Antreas Drakopoulos based in Chalkida, Greece. I am currently working on my web development skills and also actively seeking opportunities in web development to apply and expand my skillset. I have a passion for programming and
-            design and i want to see how far i can reach.
-          </p>
-        </article>
+    <section id="my-skillset">
+      <div class="skillset-container">
         <article id="skillset">
           <div class="skills-tab">
             <h2 class="text skills-title">Skillset</h2>
@@ -258,49 +245,62 @@
     <div class="seperator"></div>
     <!-- Contact Me -->
     <section id="contact-me">
-      <div class="contact-me-container">
-        <div>
-          <h2 class="text projects-title" alt="contant me">Contact Me</h2>
+      <div class="contact-me-section-container">
+        <div class="contact-me-items">
+          <h2 class="text projects-title">Contact Me</h2>
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="icon-mark bi bi-terminal" viewBox="0 0 16 16">
             <path d="M6 9a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3A.5.5 0 0 1 6 9zM3.854 4.146a.5.5 0 1 0-.708.708L4.793 6.5 3.146 8.146a.5.5 0 1 0 .708.708l2-2a.5.5 0 0 0 0-.708l-2-2z" />
             <path d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h12z" />
           </svg>
+          <h3 class="contact-info-title">Feel free to reach out to me i am currently available for freelance work.</h3>
+          <p class="text contact-info-paragraph">Here are my contact info:</p>
+          <div class="contact-info contact-me-items">
+            <ul>
+              <!-- facebook -->
+              <li class="cnt-info-panels text">
+                <a href="#" alt="facebook link">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-facebook" viewBox="0 0 16 16" alt="facebook icon">
+                    <path
+                      d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <!-- gmail -->
+              <li class="cnt-info-panels text">
+                <a href="#" alt="gmail link">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-envelope" viewBox="0 0 16 16" alt="gmail icon">
+                    <path
+                      d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <!-- github -->
+              <li class="cnt-info-panels text">
+                <a href="https://github.com/AntreasDrk" alt="github link">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-github" viewBox="0 0 16 16" alt="github icon">
+                    <path
+                      d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <h3 class="contact-info-title" alt="text">Feel free to reach out to me i am currently available for freelance work.</h3>
-        <p class="text contact-info-paragraph" alt="contact info">Here are my contact info:</p>
-        <div class="contact-info">
-          <ul>
-            <!-- facebook -->
-            <li class="cnt-info-panels text">
-              <a href="#" alt="facebook link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-facebook" viewBox="0 0 16 16" alt="facebook icon">
-                  <path
-                    d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
-                  />
-                </svg>
-              </a>
-            </li>
-            <!-- gmail -->
-            <li class="cnt-info-panels text">
-              <a href="#" alt="gmail link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-envelope" viewBox="0 0 16 16" alt="gmail icon">
-                  <path
-                    d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"
-                  />
-                </svg>
-              </a>
-            </li>
-            <!-- github -->
-            <li class="cnt-info-panels text">
-              <a href="https://github.com/AntreasDrk" alt="github link">
-                <svg xmlns="http://www.w3.org/2000/svg" width="38" height="38" fill="currentColor" class="info-icon icon-mark bi bi-github" viewBox="0 0 16 16" alt="github icon">
-                  <path
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-                  />
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="contact-me-items about-me">
+          <h2 class="text abt-me-title">About Me</h2>
+          <a href="#" class="hobbies-interests-btn" title="Hobbies and Interests">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
+              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
+            </svg>
+          </a>
+          <p class="text abt-me-paragraph">
+            My name is Antreas Drakopoulos based in Chalkida, Greece. I am currently working on my web development skills and also actively seeking opportunities in web development to apply and expand my skillset. I have a passion for programming and
+            design and i want to see how far i can reach.
+          </p>
         </div>
       </div>
     </section>
