added animation changed header el and design

--- a/index.html
+++ b/index.html
@@ -14,26 +14,15 @@
     <!-- Hero/Nav bar -->
     <section id="header">
       <div class="container">
-        <div>
-          <header>
-            <nav class="nav-bar">
-              <ul id="nav-elements">
-                <li class="nav-list name">
-                  <a href="#header"> Home </a>
-                </li>
-                <li class="nav-list about">
-                  <a href="#about-me"> About Me </a>
-                </li>
-                <li class="nav-list contact">
-                  <a href="#projects"> Projects </a>
-                </li>
-                <li class="nav-list contact">
-                  <a href="#contact-me"> Contact Me </a>
-                </li>
-              </ul>
-            </nav>
-          </header>
-        </div>
+        <nav class="nav-bar">
+          <ul id="nav-elements">
+            <li class="nav-list name"><a href="#header">Home</a></li>
+            <li class="nav-list about"><a href="#about-me">About Me</a></li>
+            <li class="nav-list contact"><a href="#projects">Projects</a></li>
+            <li class="nav-list contact"><a href="#contact-me">Contact Me</a></li>
+          </ul>
+        </nav>
+
         <div class="welcome-msg">
           <div id="profile-pic">
             <img src="./assets/images/resume-pic.png" id="profile-img" loading="lazy" alt="a profile picture" />
@@ -43,6 +32,9 @@
           </div>
           <div>
             <h2 class="sub-text">an aspiring programmer and <span class="designer">designer.</span></h2>
+          </div>
+          <div class="arrow">
+            <img src="assets/images/arrowDown.png" alt="Scroll Down Arrow" />
           </div>
         </div>
       </div>
