changes in personal projects

--- a/My-Projects/PortofolioProjects/Sign in Formats/loadingscrn.html
+++ b/My-Projects/PortofolioProjects/Sign in Formats/loadingscrn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/loadingscrn.css" />
+    <link rel="stylesheet" href="loadingscrn.css" />
   </head>
   <body>
     <div id="loading-text">
@@ -17,6 +17,6 @@
         <p>You have new notifications.</p>
       </div>
     </div>
-    <script src="/loadingscrn.js"></script>
+    <script src="loadingscrn.js"></script>
   </body>
 </html>
