--- a/My-Projects/PortofolioProjects/Sign in Formats/index.html
+++ b/My-Projects/PortofolioProjects/Sign in Formats/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="header-div">
@@ -14,25 +14,15 @@
           <p id="welcome">Welcome back. Please sign in to your account.</p>
           <div class="account-dis-div">
             <p class="paragraph"></p>
-            <input
-              type="text"
-              name="UserName"
-              placeholder="Email Adress"
-              class="input-field"
-            />
+            <input type="text" name="UserName" placeholder="Email Adress" class="input-field" />
             <p class="paragraph"></p>
-            <input
-              type="password"
-              name="Password"
-              placeholder="Password"
-              class="input-field"
-            />
+            <input type="password" name="Password" placeholder="Password" class="input-field" />
             <div class="remember-me-div">
               <input type="checkbox" class="rounded-checkbox" />
               <p class="remember-me-checkbox-text">Remember me</p>
             </div>
             <div class="button-div">
-              <a href="/loadingscrn.html" class="button">Log in</a>
+              <a href="loadingscrn.html" class="button">Log in</a>
             </div>
           </div>
           <div class="user-support">
@@ -43,19 +33,17 @@
           </div>
           <div class="other-options-div">
             <button id="google-sign-in-logo">
-              <img src="/google.png" />
+              <img src="google.png" />
             </button>
             <button id="facebook-sign-in-logo"></button>
             <button id="twitter-sign-in-logo"></button>
           </div>
           <div class="sign-up-div">
-            <p class="sign-up-text">
-              Are you new to our page? <a href="#" class="sign-up">Sign up.</a>
-            </p>
+            <p class="sign-up-text">Are you new to our page? <a href="#" class="sign-up">Sign up.</a></p>
           </div>
         </div>
       </form>
     </div>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
