added different styles on skillset section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           </ul>
         </nav>
 
+
         <div class="welcome-msg">
           <div id="profile-pic">
             <img src="./assets/images/resume-pic.png" id="profile-img" loading="lazy" class="unselectable" alt="a profile picture" />
@@ -203,7 +204,7 @@
         </div>
         <!-- MY PROJECTS TAB -->
         <div class="my-projects projects-tabs-container">
-          <!-- MONDRIAN PROJECT  -->
+          <!-- TO DO LIST PROJECT  -->
           <div class="projects-tabs">
             <div class="project-image-container">
               <img src="assets/images/mondrianProject.png" alt="mondrian project" loading="lazy" class="image-proj" />
@@ -277,7 +278,7 @@
     </section>
     <div class="seperator"></div>
     <!-- Contact Me -->
-    <section id="contact-me">
+    <section id="contact-me unselectable">
       <div class="contact-me-section-container unselectable">
         <div class="contact-me-items">
           <h2 class="text projects-title">Contact Me</h2>
