various style changes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v1H1V2a1 1 0 0 1 1-1h12zm1 3v10a1 1 0 0 1-1 1h-2V4h3zm-4 0v11H2a1 1 0 0 1-1-1V4h10z" />
           </svg>
         </div>
-        <h3 class="projects-info-title">Web Development Projects</h3>
+        <h3 class="projects-info-title">Course Projects</h3>
         <p class="text projects-info-paragraph">These are projects made step by step by Angelas Yu's course in Udemy.</p>
         <div class="projects-tabs-container">
           <!-- MONDRIAN PROJECT  -->
@@ -199,9 +199,12 @@
             </div>
           </div>
         </div>
-        <div class="seperator seperator-with-text">
+        <!-- <div class="seperator seperator-with-text"></div> -->
+        <div class="personal-projects">
+          <h3 class="projects-info-title">Personal Projects</h3>
           <p class="text projects-info-paragraph my-projects-text"> These are projects i made and still work on myself.</p>
         </div>
+        
         <!-- MY PROJECTS TAB -->
         <div class="my-projects projects-tabs-container">
           <!-- TO DO LIST PROJECT  -->
