changed the nav-bar

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
       <div class="container unselectable">
         <nav class="nav-bar">
           <ul id="nav-elements">
+            <div class="logo-container">
+              <div class="logo-content nav-list">
+                <img src="assets/images/resume-pic.png" class="logo-img">
+                <p class="logo-name">Antreas Drakopoulos</p>
+              </div>
+            </div>
             <li class="nav-list name"><a href="#header">Home</a></li>
-            <li class="nav-list about"><a href="#about-me">About Me</a></li>
+            <li class="nav-list about"><a href="#about-me">About</a></li>
             <li class="nav-list contact"><a href="#projects">Projects</a></li>
-            <li class="nav-list contact"><a href="#contact-me">Contact Me</a></li>
+            <li class="nav-list contact"><a href="#contact-me">Contact</a></li>
           </ul>
         </nav>
 
