REMOVED OLD PROFILE PICTURE

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
 
 
-        <div class="welcome-msg">
+        <!-- <div class="welcome-msg">
           <div id="profile-pic">
             <img src="./assets/images/resume-pic.png" id="profile-img" loading="lazy" class="unselectable" alt="a profile picture" />
           </div>
@@ -39,11 +39,11 @@
           </div>
           <div>
             <h2 class="sub-text unselectable">an aspiring programmer and <span class="designer">designer.</span></h2>
-          </div>
+          </div> -->
           <div class="arrow unselectable"><a href="#my-skillset"><img src="assets/images/arrowDown.png" alt="Scroll Down Arrow" /></a>
           </div>
         </div>
-      </div>
+      </div> 
     </section>
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <!-- About Me -->
