--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
             <li class="nav-list contact"><a href="#contact-me">Contact</a></li>
           </ul>
         </nav>
-
-
+        <div class="message-container">
+          <div class="introduction">
+            <h1 class="name-intro">HEY, I'M ANTREAS DRAKOPOULOS</h1>
+            <h3 class="overall-intro">
+              A Frontend Web Developer building Frondend Websites and Web Aplications that leads
+              to the success of the overall product
+            </h3>
+          </div>
+          <div class="projects-btn-container">
+            <button class="projects-btn">PROJECTS</button>
+          </div>
+        </div>
         <!-- <div class="welcome-msg">
           <div id="profile-pic">
             <img src="./assets/images/resume-pic.png" id="profile-img" loading="lazy" class="unselectable" alt="a profile picture" />
@@ -45,6 +55,7 @@
         </div>
       </div> 
     </section>
+
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <!-- About Me -->
     <section id="my-skillset">
