--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </h3>
           </div>
           <div class="projects-btn-container">
-            <button class="projects-btn">PROJECTS</button>
+            <a href="#projects" class="projects-btn">PROJECTS</a>
           </div>
         </div>
         <!-- <div class="welcome-msg">
