added JS file and animation to h1 el

--- a/index.html
+++ b/index.html
@@ -365,6 +365,6 @@
         <p class="text footer-text" alt="footer">Antreas Drakopoulos© 2023</p>
       </footer>
     </section>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
