moving projects on different page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="introduction">
             <h1 class="name-intro">HEY, I'M ANTREAS DRAKOPOULOS</h1>
             <h3 class="overall-intro">
-              A Frontend Web Developer building Frondend Websites and Web Aplications that leads
+              A Frontend Web Developer building Frontend Websites and Web Aplications that leads
               to the success of the overall product
             </h3>
           </div>
