--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
               </div>
             </div>
             <li class="nav-list name"><a href="#header">Home</a></li>
-            <li class="nav-list about"><a href="#about-me">About</a></li>
-            <li class="nav-list contact"><a href="#projects">Projects</a></li>
+            <li class="nav-list about"><a href="aboutme.html" target="_blank">About</a></li>
+            <li class="nav-list contact"><a href="projects.html" target="_blank">Projects</a></li>
             <li class="nav-list contact"><a href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -37,7 +37,7 @@
             </h3>
           </div>
           <div class="projects-btn-container">
-            <a href="#projects" class="projects-btn">PROJECTS</a>
+            <a href="projects.html" class="projects-btn" target="_blank">PROJECTS</a>
           </div>
         </div>
         <!-- <div class="welcome-msg">
@@ -342,19 +342,6 @@
               </li>
             </ul>
           </div>
-        </div>
-        <div class="contact-me-items about-me">
-          <h2 class="text abt-me-title">About Me</h2>
-          <a href="#" class="hobbies-interests-btn" title="Hobbies and Interests">
-            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
-              <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
-            </svg>
-          </a>
-          <p class="text abt-me-paragraph">
-            My name is Antreas Drakopoulos based in Chalkida, Greece. I am currently working on my web development skills and also actively seeking opportunities in web development to apply and expand my skillset. I have a passion for programming and
-            design and i want to see how far i can reach.
-          </p>
         </div>
       </div>
     </section>
