reworked main file, added notes

--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <!-- IMPORTANT GIVE MORE EMPHASIS HERE!!! -->
+    <!-- IMPORTANT GIVE MORE EMPHASIS HERE!!!  TODO-->
     <!-- Projects -->
     <section id="projects">
       <div class="projects-container unselectable">
