--- a/aboutme.html
+++ b/aboutme.html
@@ -13,18 +13,22 @@
   <body>
     <section id="my-skillset">
       <div class="about-me">
+        <!-- TODO ADD SHADOW TO ABOUT ME -->
         <h2 class="text abt-me-title">About Me</h2>
+        <!-- TODO ADD A MODAL WINDOW TO HOBBIES AND INTERESTS BTN -->
         <a href="#" class="hobbies-interests-btn" title="Hobbies and Interests">
           <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-bookmark-heart" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M8 4.41c1.387-1.425 4.854 1.07 0 4.277C3.146 5.48 6.613 2.986 8 4.412z" />
             <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
           </svg>
         </a>
+        <!-- TODO MAKE IT MORE RICH -->
         <p class="text abt-me-paragraph">
           My name is Antreas Drakopoulos based in Chalkida, Greece. I am currently working on my web development skills and also actively seeking opportunities in web development to apply and expand my skillset. I have a passion for programming and
           design and i want to see how far i can reach.
         </p>
       </div>
+      <!-- TODO FIX PARAGRAPHS COLORS -->
       <div class="skillset-container unselectable">
         <article id="skillset">
           <div class="skills-tab">
