--- a/index.html
+++ b/index.html
@@ -50,252 +50,13 @@
           <div>
             <h2 class="sub-text unselectable">an aspiring programmer and <span class="designer">designer.</span></h2>
           </div> -->
+          <!-- TODO ADD SIDEBAR (LEFT) WITH SOCIAL MEDIA INFO AND OTHER WAYS TO CONTACT -->
           <div class="arrow unselectable"><a href="#my-skillset"><img src="assets/images/arrowDown.png" alt="Scroll Down Arrow" /></a>
           </div>
         </div>
       </div> 
     </section>
-
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
-    <!-- About Me -->
-    <section id="my-skillset">
-      <div class="skillset-container unselectable">
-        <article id="skillset">
-          <div class="skills-tab">
-            <h2 class="text skills-title">Skillset</h2>
-            <div class="skills-info">
-              <!-- html/css/bootstrap -->
-              <div class="skills-text-container">
-                <div>
-                  <h3 class="text skills-info-title">HTML/CSS/BOOTSTRAP</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-filetype-html" viewBox="0 0 16 16">
-                    <path
-                      fill-rule="evenodd"
-                      d="M14 4.5V11h-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5Zm-9.736 7.35v3.999h-.791v-1.714H1.79v1.714H1V11.85h.791v1.626h1.682V11.85h.79Zm2.251.662v3.337h-.794v-3.337H4.588v-.662h3.064v.662H6.515Zm2.176 3.337v-2.66h.038l.952 2.159h.516l.946-2.16h.038v2.661h.715V11.85h-.8l-1.14 2.596H9.93L8.79 11.85h-.805v3.999h.706Zm4.71-.674h1.696v.674H12.61V11.85h.79v3.325Z"
-                    />
-                  </svg>
-                </div>
-                <p class="text skills-prgph">Skilled in the creation of responsive web designs and organization of content, possessing a solid grasp of HTML5/CSS3 and BOOTSTRAP.</p>
-              </div>
-              <div>
-                <div>
-                  <h3 class="text skills-info-title">Testing & Debugging</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-exclamation-diamond" viewBox="0 0 16 16">
-                    <path
-                      d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.482 1.482 0 0 1 0-2.098L6.95.435zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z"
-                    />
-                    <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z" />
-                  </svg>
-                </div>
-                <p class="text skills-prgph">In the journey of becoming a Full-Stack Developer solving my own bugs is teaching me how to make my own code better to read and more functional.</p>
-              </div>
-              <div>
-                <div>
-                  <h3 class="text skills-info-title">User Interface & Experience</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-grid-1x2" viewBox="0 0 16 16">
-                    <path
-                      d="M6 1H1v14h5V1zm9 0h-5v5h5V1zm0 9v5h-5v-5h5zM0 1a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm9 0a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V1zm1 8a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-5a1 1 0 0 0-1-1h-5z"
-                    />
-                  </svg>
-                </div>
-                <p class="text skills-prgph">Creating effective designs which are easy to navigate and use for the user is one of the things i put more effort into.</p>
-              </div>
-              <!-- javascript -->
-              <div>
-                <div>
-                  <h3 class="text skills-info-title">JAVASCRIPT/JQUERY</h3>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-filetype-js" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2H8v-1h4a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5zM3.186 15.29a1.2 1.2 0 0 1-.111-.449h.765a.58.58 0 0 0 .255.384q.105.073.249.114.143.041.319.041.246 0 .413-.07a.56.56 0 0 0 .255-.193.5.5 0 0 0 .085-.29.39.39 0 0 0-.153-.326q-.151-.12-.462-.193l-.619-.143a1.7 1.7 0 0 1-.539-.214 1 1 0 0 1-.351-.367 1.1 1.1 0 0 1-.123-.524q0-.366.19-.639.19-.272.528-.422.336-.15.776-.149.457 0 .78.152.324.153.5.41.18.255.2.566h-.75a.56.56 0 0 0-.12-.258.6.6 0 0 0-.247-.181.9.9 0 0 0-.369-.068q-.325 0-.513.152a.47.47 0 0 0-.184.384q0 .18.143.3a1 1 0 0 0 .405.175l.62.143q.327.075.566.211.24.136.375.358t.135.56q0 .37-.188.656a1.2 1.2 0 0 1-.539.439q-.351.158-.858.158-.381 0-.665-.09a1.4 1.4 0 0 1-.478-.252 1.1 1.1 0 0 1-.29-.375m-3.104-.033A1.3 1.3 0 0 1 0 14.791h.765a.6.6 0 0 0 .073.27.5.5 0 0 0 .454.246q.285 0 .422-.164.138-.165.138-.466v-2.745h.79v2.725q0 .66-.357 1.005-.354.345-.984.345a1.6 1.6 0 0 1-.569-.094 1.15 1.15 0 0 1-.407-.266 1.1 1.1 0 0 1-.243-.39"/>
-                  </svg>
-                </div>
-                <p class="text skills-prgph">Skilled at writing vanilla javascript in a practical and readable way working my way towards learning various frameworks such as React.
-                  Also learning jQuery and trying to get fluent at it.
-                </p>
-              </div>
-            </div>
-          </div>
-        </article>
-      </div>
-    </section>
-    <!-- IMPORTANT GIVE MORE EMPHASIS HERE!!! -->
-    <!-- Projects -->
-    <section id="projects">
-      <div class="projects-container unselectable">
-        <div>
-          <h2 class="text projects-title">Projects</h2>
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="icon-mark bi bi-layout-text-window" viewBox="0 0 16 16">
-            <path d="M3 6.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z" />
-            <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v1H1V2a1 1 0 0 1 1-1h12zm1 3v10a1 1 0 0 1-1 1h-2V4h3zm-4 0v11H2a1 1 0 0 1-1-1V4h10z" />
-          </svg>
-        </div>
-        <h3 class="projects-info-title">Course Projects</h3>
-        <p class="text projects-info-paragraph">These are projects made step by step by Angelas Yu's course in Udemy.</p>
-        <div class="projects-tabs-container">
-          <!-- MONDRIAN PROJECT  -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/mondrianProject.png" alt="mondrian project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Mondrian Project</h3>
-            </div>
-            <div class="description-text text">Recreated a Mondrian art piece using CSS</div>
-            <div class="view-project">
-              <a href="Projects/Mondrian/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Mondrian" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- TINDOG PROJECT  -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/tinDogProject.png" alt="tindog project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">TinDog Project</h3>
-            </div>
-            <div class="description-text text">Built a landing page using Bootstrap</div>
-            <div class="view-project">
-              <a href="Projects/TinDog/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/TinDog" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- MOVE WITH JOY  -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/moveItProject.png" alt="move it project" loading="lazy" class="image-proj img-icon" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Move It Project</h3>
-            </div>
-            <div class="description-text text">Developed a Packers and Movers website</div>
-            <div class="view-project">
-              <a href="Projects/Move With Joy/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Move%20With%20Joy" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- DICE GAME -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/diceGame.png" alt="dice game project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Dice Game Project</h3>
-            </div>
-            <div class="description-text text">A Dice game made with HTML,CSS and JS.</div>
-            <div class="view-project">
-              <a href="Projects/Dice Game/dicee.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Dice%20Game" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- DRUMKIT GAME -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/drumKitGame.png" alt="drumkit game project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Drumkit Game Project</h3>
-            </div>
-            <div class="description-text text">Buttons with sounds using JS</div>
-            <div class="view-project">
-              <a href="Projects/DrumKit Game/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/DrumKit%20Game" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- WEB DESIGN AGENCY -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/webDesignAgency.png" alt="web design agency project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Web Design Agency Project</h3>
-            </div>
-            <div class="description-text text">Built a Web Design Agency (basic HTML,CSS)</div>
-            <div class="view-project">
-              <a href="Projects/Web Design Agency/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Web%20Design%20Agency" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="seperator seperator-with-text"></div> -->
-        <div class="personal-projects">
-          <h3 class="projects-info-title">Personal Projects</h3>
-          <p class="text projects-info-paragraph my-projects-text"> These are projects i made and still work on myself.</p>
-        </div>
-        
-        <!-- MY PROJECTS TAB -->
-        <div class="my-projects projects-tabs-container">
-          <!-- TO DO LIST PROJECT  -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/mondrianProject.png" alt="mondrian project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">Mondrian Project</h3>
-            </div>
-            <div class="description-text text">Recreated a Mondrian art piece using CSS</div>
-            <div class="view-project">
-              <a href="Projects/Mondrian/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/Projects/Mondrian" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- THE LIBRARY  -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/theLibrary.png" alt="the library project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">TheLibrary Project</h3>
-            </div>
-            <div class="description-text text">As the name states a personal library</div>
-            <div class="view-project">
-              <a href="My-Projects/PortofolioProjects/TheLibrary/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/My-Projects/PortofolioProjects/TheLibrary" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- MYCALCULATOR -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/myCalculator.png" alt="calculator project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">MyCalculator Project</h3>
-            </div>
-            <div class="description-text text">A basic calculator made with JS.</div>
-            <div class="view-project">
-              <a href="My-Projects/PortofolioProjects/Calculator/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/My-Projects/PortofolioProjects/Calculator" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- NETFLIX CLONE -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/netflixClone.png" alt="netflix Clone project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">NetflixClone Project</h3>
-            </div>
-            <div class="description-text text">Here trying to re-create a NetflixClone.</div>
-            <div class="view-project">
-              <a href="My-Projects/PortofolioProjects/NetflixClone/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/My-Projects/PortofolioProjects/NetflixClone" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-          <!-- SIGN UP FORM -->
-          <div class="projects-tabs">
-            <div class="project-image-container">
-              <img src="assets/images/signUpForm.png" alt="sign Up Format project" loading="lazy" class="image-proj" />
-            </div>
-            <div class="project-description-title">
-              <h3 class="text description-title">SignUpForm Project</h3>
-            </div>
-            <div class="description-text text">A simple form with CSS/JS.</div>
-            <div class="view-project">
-              <a href="My-Projects/PortofolioProjects/Sign in Formats/index.html" class="view-project btn" target="_blank">View Project</a>
-              <a href="https://github.com/AntreasDrk/Portfolio/tree/main/My-Projects/PortofolioProjects/Sign%20in%20Formats" class="view-code btn" target="_blank">View Code</a>
-            </div>
-          </div>
-      </div>
-    </section>
     <div class="seperator"></div>
     <!-- Contact Me -->
     <section id="contact-me unselectable">
