more changes to the main file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <div class="seperator"></div>
     <!-- Contact Me -->
-    <section id="contact-me unselectable">
+    <section id="contact-me" class="unselectable">
       <div class="contact-me-section-container unselectable">
         <div class="contact-me-items">
           <h2 class="text projects-title">Contact Me</h2>
