removed animated arrow in main page

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
           <ul id="nav-elements">
             <div class="logo-container">
               <div class="logo-content nav-list">
-                <img src="assets/images/resume-pic.png" class="logo-img">
+                <img src="assets/images/resume-pic.png" class="logo-img" />
                 <p class="logo-name">Antreas Drakopoulos</p>
               </div>
               <div class="dropdown">
-                <button class="dropbtn">D
+                <button class="dropbtn">
+                  D
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
@@ -31,7 +32,7 @@
                   <a href="projects.html" target="_blank">Projects</a>
                   <a href="#contact-me">Contact</a>
                 </div>
-              </div> 
+              </div>
             </div>
             <li class="nav-list name"><a href="#header">Home</a></li>
             <li class="nav-list about"><a href="aboutme.html" target="_blank">About</a></li>
@@ -42,30 +43,14 @@
         <div class="message-container">
           <div class="introduction">
             <h1 class="name-intro">HEY, I'M ANTREAS DRAKOPOULOS</h1>
-            <h3 class="overall-intro">
-              A Frontend Web Developer building Frontend Websites and Web Aplications that leads
-              to the success of the overall product
-            </h3>
+            <h3 class="overall-intro">A Frontend Web Developer building Frontend Websites and Web Aplications that leads to the success of the overall product</h3>
           </div>
           <div class="projects-btn-container">
             <a href="projects.html" class="projects-btn" target="_blank">PROJECTS</a>
           </div>
         </div>
-        <!-- <div class="welcome-msg">
-          <div id="profile-pic">
-            <img src="./assets/images/resume-pic.png" id="profile-img" loading="lazy" class="unselectable" alt="a profile picture" />
-          </div>
-          <div>
-            <h1 class="unselectable">I am Antreas</h1>
-          </div>
-          <div>
-            <h2 class="sub-text unselectable">an aspiring programmer and <span class="designer">designer.</span></h2>
-          </div> -->
-          <!-- TODO ADD SIDEBAR (LEFT) WITH SOCIAL MEDIA INFO AND OTHER WAYS TO CONTACT -->
-          <div class="arrow unselectable"><a href="#my-skillset"><img src="assets/images/arrowDown.png" alt="Scroll Down Arrow" /></a>
-          </div>
-        </div>
-      </div> 
+        <!-- TODO ADD SIDEBAR (LEFT) WITH SOCIAL MEDIA INFO AND OTHER WAYS TO CONTACT -->
+      </div>
     </section>
     <!-- TODO MOVE ABOUT ME TO THE BOTTOM SIDE NEXT TO CONTACT ME AND SEE HOW IT LOOKS -->
     <div class="seperator"></div>
