added svg on dropdown menu

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </div>
               <div class="dropdown">
                 <button class="dropbtn">
-                  D
+                  <img src="assets/images/dropdownMenuIcon.svg" />
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
